# SPGSolver

./: .gitignore  README.md  build.sbt
C++/: CMakeLists.txt  CPPSolver.cpp  README.md  main.cpp
C++/CPPsolver/CPPsolver/: main.cpp
C++/CPPsolver/CPPsolver.xcodeproj/: project.pbxproj
C++/CPPsolver/CPPsolver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
C++/CPPsolver/CPPsolver.xcodeproj/project.xcworkspace/xcshareddata/: CPPsolver.xccheckout
C++/CPPsolver/CPPsolver.xcodeproj/project.xcworkspace/xcuserdata/umberto1.xcuserdatad/: UserInterfaceState.xcuserstate
C++/CPPsolver/CPPsolver.xcodeproj/xcuserdata/umberto1.xcuserdatad/xcschemes/: CPPsolver.xcscheme  xcschememanagement.plist
Go/: GPGSolver.go  README.md  main.go
Go/graphs/: graphs.go
Go/solvers/: concurrent_solver.go  recursive_improved.go  recursive_solver.go  solvers.go
Go/utils/: utils.go
Java/: App.java  Graph.java  ImprovedRecursiveSolver.java  README.md  Utils.java  pom.xml
Java/src/main/java/com/JPGSolver/: App.java  AsyncSolver.java  AsyncSolver3.java  CommandLineArgs.java  Graph.java  ImprovedRecursiveSolver.java  IterativeSolver.java  MyTrove.java  RecursiveSolver.java  Solver.java
Java/src/test/java/com/JPGSolver/: AppTest.java
Scala/: README.md
Scala/src/solvers/: ClassicRecursivePGSolver.scala  RecursiveSolver.scala
pgsolv/: Makefile  main.go
pgsolv/Godeps/: Godeps.json
src/: Main.scala  Utils.scala
src/datastructures/: Graph.scala  GraphPGSolver.scala
src/solvers/: Solver.scala
